# rules_docker-python-example

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  hello.py  shell.nix
